[package]
name = "MQTTBroker"
version = "0.1.0"
authors = ["Abdul Jabbar Azam <ajazam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
test-case = "2.1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features =["env-filter","fmt"]}
paste = "1.0.9"
pretty-hex = "0.3.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
mockall = "0.11"
test-log = {version="0.2", default-features=false, features=["trace"]}

