[workspace]

members = [
    "deser",
    "broker",
    "client",
    "common"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
test-case = "2.1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features =["env-filter","fmt"]}
paste = "1.0.9"
nu-pretty-hex = "0.78"
tracing-test = "0.2"
tracing-fluent-assertions = "0.3.0"
