[package]
name = "deser"
version = "0.1.0"
authors = ["Abdul Jabbar Azam <ajazam@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deser"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
tokio.workspace = true
bytes.workspace = true
lazy_static.workspace = true
test-case.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
paste.workspace = true
nu-pretty-hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
mockall = "0.11"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-test.workspace = true
